k8s-manifests/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: mongodb
          image: mongo:6.0
          ports:
            - containerPort: 27017
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false # MongoDB needs to write to /tmp
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 999
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: mongodb-storage
          emptyDir: {} # Simple empty directory, data lost on pod restart
      serviceAccountName: mongodb-sa
