k8s-manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: acr-admin-creds
      containers:
        - name: backend
          image: devopsjourney.azurecr.io/devops-backend:v1 # Update with your image
          ports:
            - containerPort: 5000
          # env:
          #   - name: NODE_ENV
          #     value: "development"
          #   - name: MONGODB_URI
          #     value: "mongodb://mongodb:27017/devops-app"
          #   - name: JWT_SECRET
          #     value: "your-secret-key" # We'll move this to secrets later
          #   - name: PORT
          #     value: "5000"

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
