k8s-manifests/jaeger-all-in-one.yaml
# jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-all-in-one
  namespace: monitoring
  labels:
    app: jaeger
    app.kubernetes.io/component: all-in-one
spec:
  type: NodePort
  ports:
    - name: http-query
      port: 16686
      targetPort: 16686
      nodePort: 32086
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jaeger-all-in-one
