k8s-manifests/jaeger.yaml
# jaeger-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-nodeport
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - name: query-http
      port: 16686
      targetPort: 16686
      nodePort: 32086
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
